# 3D_Render

./: CMakeLists.txt  box.cpp  box.h  camera.cpp  camera.h  geometry.cpp  geometry.h  main.cpp  objects.cpp  objects.h  renderer.cpp  renderer.h
